--- a/app/src/main/res/layout/fragment_category_main.xml
+++ b/app/src/main/res/layout/fragment_category_main.xml
@@ -103,6 +103,7 @@
         </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
+            android:id="@+id/eyes_cardview"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_margin="10dp"
