--- a/app/src/main/res/layout/wishlist_item_layout.xml
+++ b/app/src/main/res/layout/wishlist_item_layout.xml
@@ -18,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:background="@drawable/imageview_boarder"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -42,14 +43,17 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
-                android:backgroundTint="@color/black"
+                android:background="@drawable/imageview_boarder"
+                android:backgroundTint="@color/white"
                 app:srcCompat="@drawable/ic_baseline_remove_24" />
 
             <TextView
                 android:id="@+id/amount_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="10dp"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="TextView"
@@ -61,7 +65,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
-                android:backgroundTint="@color/black"
+                android:background="@drawable/imageview_boarder"
+                android:backgroundTint="@color/white"
                 app:srcCompat="@drawable/ic_baseline_add_24" />
 
 
@@ -72,7 +77,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:backgroundTint="@color/background"
+            android:background="@drawable/imageview_boarder"
+            android:backgroundTint="@color/white"
             app:srcCompat="@drawable/ic_baseline_delete_24" />
 
     </LinearLayout>
