--- a/app/src/main/res/layout/wishlist_item_layout.xml
+++ b/app/src/main/res/layout/wishlist_item_layout.xml
@@ -32,6 +32,13 @@
             android:requiresFadingEdge="horizontal"
             tools:srcCompat="@tools:sample/avatars" />
 
+        <TextView
+            android:id="@+id/product_name_wishlist_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="TextView" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -73,7 +80,7 @@
         </LinearLayout>
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/delete_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
