--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -33,4 +33,10 @@
     <style name="Theme.BeautyStop.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 
+
+    <style name="ShapeAppearanceOverlay.App.CornerSize50Percent" parent="">
+        <item name="cornerSize">50%</item>
+    </style>
+
+
 </resources>
