--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         android:id="@+id/buttom_navigation"
         android:layout_width="409dp"
         android:layout_height="56dp"
-        android:background="#000000"
+        android:background="@color/bottom_bar"
         app:itemIconSize="34dp"
         app:itemIconTint="@drawable/selc"
         app:labelVisibilityMode="unlabeled"
