--- a/app/src/main/res/layout/fragment_category_main.xml
+++ b/app/src/main/res/layout/fragment_category_main.xml
@@ -26,33 +26,32 @@
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/lips_cardview"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="180dp"
             android:layout_gravity="center"
             android:layout_margin="10dp"
             android:layout_marginBottom="5dp"
             android:backgroundTint="@color/white"
             app:cardCornerRadius="30dp"
-            app:strokeColor="@color/black"
-           >
+            app:strokeColor="@color/black">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="222dp"
+                android:layout_height="180dp"
                 android:gravity="center"
                 android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/imageView12"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="100dp"
                     android:layout_gravity="center"
+                    android:layout_marginBottom="30dp"
                     android:src="@drawable/rouge21" />
 
                 <TextView
                     android:id="@+id/textView15"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:gravity="center"
                     android:text="Lips"
                     android:textColor="@color/black"
@@ -66,7 +65,7 @@
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/face_cardview"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="180dp"
             android:layout_margin="10dp"
             android:backgroundTint="@color/white"
             app:cardCornerRadius="30dp"
@@ -74,14 +73,14 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="180dp"
                 android:gravity="center"
                 android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/imageView5"
                     android:layout_width="wrap_content"
-                    android:layout_height="150dp"
+                    android:layout_height="130dp"
                     android:adjustViewBounds="true"
                     android:background="#00FFFFFF"
                     android:scaleType="centerCrop"
@@ -105,7 +104,7 @@
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/eyes_cardview"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="180dp"
             android:layout_margin="10dp"
             android:backgroundTint="@color/white"
             app:cardCornerRadius="30dp"
@@ -114,14 +113,14 @@
             <LinearLayout
                 android:id="@+id/linearLayout3"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="180dp"
                 android:gravity="center"
                 android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/imageView9"
-                    android:layout_width="match_parent"
-                    android:layout_height="110dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="100dp"
                     android:layout_marginTop="15dp"
                     android:layout_marginBottom="25dp"
                     android:adjustViewBounds="true"
