--- a/app/src/main/res/layout/products_item_layout.xml
+++ b/app/src/main/res/layout/products_item_layout.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
     android:background="@color/white">
 
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_weight="1"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
         tools:srcCompat="@tools:sample/avatars" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
