--- a/app/src/main/res/layout/fragment_products_list.xml
+++ b/app/src/main/res/layout/fragment_products_list.xml
@@ -13,11 +13,13 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="#EAEAEA"
-      app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         app:spanCount="3">
 
     </androidx.recyclerview.widget.RecyclerView>
@@ -31,4 +33,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/list_progressBar2"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="54dp"
+        android:layout_height="54dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/productslist_recyclerview"
+        app:layout_constraintVertical_bias="0.66" />
 </androidx.constraintlayout.widget.ConstraintLayout>
