--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -148,25 +148,7 @@
             android:layout_height="match_parent"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/product_rating_textview"
-                style="@style/details_texts"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:text="@string/rating" />
-
-            <TextView
-                android:id="@+id/rating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:text="TextView" />
-        </LinearLayout>
+            android:orientation="horizontal"/>
 
         <View
             android:id="@+id/divider"
@@ -201,6 +183,15 @@
 
         </LinearLayout>
 
+        <Button
+            android:id="@+id/addto_cart_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/button_shape"
+            android:text="@string/add_to_cart_button"
+            android:textColor="@color/black" />
+
         <View
             android:id="@+id/divider2"
             android:layout_width="match_parent"
@@ -212,24 +203,7 @@
             android:layout_height="match_parent"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/coproduct_colors_textview"
-                style="@style/details_texts"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:text="@string/colors" />
-
-            <TextView
-                android:id="@+id/colors"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:text="TextView" />
-        </LinearLayout>
+            android:orientation="horizontal"/>
 
     </LinearLayout>
 
