--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -34,12 +34,12 @@
             android:gravity="center"
             android:text="In Your Element Lipstick - Wind"
             android:textColor="@color/black"
-            android:textSize="34sp" />
+            android:textSize="26sp" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/view2"
-            android:layout_width="190dp"
-            android:layout_height="190dp"
+            android:layout_width="130dp"
+            android:layout_height="130dp"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
@@ -53,8 +53,8 @@
 
             <ImageView
                 android:id="@+id/productDetailsImageview"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
+                android:layout_width="140dp"
+                android:layout_height="140dp"
 
                 tools:srcCompat="@drawable/palette" />
         </androidx.cardview.widget.CardView>
@@ -182,12 +182,51 @@
                 android:text="TextView" />
 
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/details_minus_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/imageview_boarder"
+                android:backgroundTint="@color/white"
+                app:srcCompat="@drawable/ic_baseline_remove_24" />
+
+            <TextView
+                android:id="@+id/details_amount_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="10dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="1"
+                android:textColor="@color/black" />
+
+            <ImageButton
+                android:id="@+id/details_plus_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/imageview_boarder"
+                android:backgroundTint="@color/white"
+                app:srcCompat="@drawable/ic_baseline_add_24" />
+
+
+        </LinearLayout>
 
         <Button
             android:id="@+id/addto_cart_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="30dp"
             android:background="@drawable/button_shape"
             android:text="@string/add_to_cart_button"
             android:textColor="@color/black" />
