--- a/app/src/main/res/layout/shopping_bag_item_layout.xml
+++ b/app/src/main/res/layout/shopping_bag_item_layout.xml
@@ -35,7 +35,26 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginEnd="15dp"
             android:text="TextView" />
+
+        <TextView
+            android:id="@+id/cart_product_quantity_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:text="TextView" />
+
+
+        <ImageButton
+            android:id="@+id/cart_delete_button"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_weight="1"
+            android:background="@drawable/imageview_boarder"
+            android:backgroundTint="@color/white"
+            app:srcCompat="@drawable/ic_baseline_delete_24" />
     </LinearLayout>
 </LinearLayout>
