--- a/app/src/main/res/layout/shopping_bag_item_layout.xml
+++ b/app/src/main/res/layout/shopping_bag_item_layout.xml
@@ -28,17 +28,29 @@
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="8dp"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/cart_product_price_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
-            android:layout_marginBottom="8dp"
             android:layout_marginEnd="15dp"
-            android:text="TextView" />
+            android:layout_marginBottom="8dp"
+            android:text="TextView"
+            android:textColor="@color/black" />
 
+
+        <TextView
+            android:id="@+id/cart_product_quantity_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="8dp"
+            android:text="TextView"
+            android:textColor="@color/black" />
 
         <ImageButton
             android:id="@+id/cart_delete_button"
