--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -27,9 +27,9 @@
             app:destination="@id/shoppingCartFragment" />
     </fragment>
     <fragment
-        android:id="@+id/favoritesFragment"
+        android:id="@+id/Wishlist_fragment"
         android:name="com.example.beautystop.view.WishlistFragment"
-        android:label="Favorites"
+        android:label="Wishlist"
         tools:layout="@layout/fragment_wishlist" />
     <fragment
         android:id="@+id/productsListFragment"
@@ -47,5 +47,13 @@
         android:id="@+id/shoppingCartFragment"
         android:name="com.example.beautystop.view.ShoppingBagFragment"
         android:label="Cart"
-        tools:layout="@layout/fragment_shopping_bag" />
+        tools:layout="@layout/fragment_shopping_bag" >
+        <action
+            android:id="@+id/action_shoppingCartFragment_to_orderFragment"
+            app:destination="@id/orderFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/orderFragment"
+        android:name="com.example.beautystop.view.OrderFragment"
+        android:label="OrderFragment" />
 </navigation>
