--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -10,4 +10,9 @@
         android:id="@+id/Wishlist_fragment"
         android:icon="@drawable/ic_wish"
         android:title="wishlist" />
+    <item
+        android:id="@+id/action_categoryMainFragment_to_shoppingCartFragment"
+        android:icon="@drawable/ic_baseline_shopping_bag_24"
+        android:title="Bag"
+        />
 </menu>
