--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -64,7 +64,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginBottom="20dp"
-            android:background="@drawable/ic_baseline_add_24"
+            android:background="@drawable/add_towishlist"
             android:textOff=" "
             android:textOn=" "
             app:layout_constraintEnd_toEndOf="parent"
@@ -96,7 +96,9 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:layout_weight="1"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -134,7 +136,9 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:layout_weight="1"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
         </LinearLayout>
 
         <View
