fixed logical errors

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -50,7 +50,8 @@
     <TextView
         android:id="@+id/register_textview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
+        android:gravity="center"
         android:text="Don't have an account? Register"
         android:textColor="@color/hint_color" />
 
