--- a/app/src/main/res/layout/fragment_comfirmation.xml
+++ b/app/src/main/res/layout/fragment_comfirmation.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
         android:layout_marginBottom="20dp"
         android:src="@drawable/ic_baseline_check_circle_outline_24" />
 
@@ -27,8 +27,19 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
         android:gravity="center"
         android:text="@string/checkout_text"
+        android:textColor="@color/black"
+        android:textSize="24sp" />
+
+    <Button
+        android:id="@+id/order_details_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:gravity="center"
+        android:text="@string/order_details"
         android:textColor="@color/black"
         android:textSize="24sp" />
 
