--- a/app/src/main/res/drawable/button_shape.xml
+++ b/app/src/main/res/drawable/button_shape.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:radius="300dp"/>
-    <solid android:color="@color/teal_200"/>
+    <solid android:color="@color/background"/>
     <size android:width="70dp"/>
 </shape>
