--- a/app/src/main/res/layout/fragment_shopping_bag.xml
+++ b/app/src/main/res/layout/fragment_shopping_bag.xml
@@ -7,6 +7,21 @@
     android:layout_height="match_parent"
     tools:context=".view.ShoppingBagFragment">
 
+    <TextView
+        android:id="@+id/title"
+        style="?android:attr/listSeparatorTextViewStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:gravity="center"
+        android:text="Shopping bag"
+        android:textColor="@color/header_textcolor"
+        android:textSize="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/cart_recyclerciew"
         android:layout_width="0dp"
@@ -16,8 +31,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/title" />
 
     <Button
         android:id="@+id/order_button"
