--- a/app/src/main/res/layout/shopping_bag_item_layout.xml
+++ b/app/src/main/res/layout/shopping_bag_item_layout.xml
@@ -7,6 +7,7 @@
     android:layout_margin="10dp"
     android:layout_marginStart="15dp"
     android:layout_marginEnd="10dp"
+    android:background="@color/background"
     android:gravity="center">
 
     <ImageView
@@ -16,14 +17,13 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:gravity="center"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/cart_product_name_tv"
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
@@ -33,7 +33,7 @@
 
         <TextView
             android:id="@+id/cart_product_price_tv"
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
@@ -44,7 +44,7 @@
 
         <TextView
             android:id="@+id/cart_product_quantity_tv"
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
@@ -52,13 +52,14 @@
             android:text="TextView"
             android:textColor="@color/black" />
 
-        <ImageButton
-            android:id="@+id/cart_delete_button"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_weight="1"
-            android:background="@drawable/imageview_boarder"
-            android:backgroundTint="@color/white"
-            app:srcCompat="@drawable/ic_baseline_delete_24" />
     </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/cart_delete_button"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_weight="1"
+        android:background="@color/background"
+        android:backgroundTint="@color/background"
+        app:srcCompat="@drawable/ic_baseline_delete_24" />
 </LinearLayout>
