--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -14,11 +14,14 @@
             android:id="@+id/action_categoryMainFragment_to_productsListFragment"
             app:destination="@id/productsListFragment" />
         <action
-            android:id="@+id/shoppingBagFragment"
+            android:id="@+id/shoppingCartFragment"
             app:destination="@id/shoppingCartFragment" />
         <action
             android:id="@+id/action_categoryMainFragment_self"
             app:destination="@id/categoryMainFragment" />
+        <action
+            android:id="@+id/action_categoryMainFragment_to_ordersFragment"
+            app:destination="@id/ordersFragment" />
     </fragment>
     <fragment
         android:id="@+id/detailsFragment"
@@ -37,6 +40,9 @@
         <action
             android:id="@+id/action_Wishlist_fragment_to_shoppingCartFragment"
             app:destination="@id/shoppingCartFragment" />
+        <action
+            android:id="@+id/action_Wishlist_fragment_to_detailsFragment"
+            app:destination="@id/detailsFragment" />
     </fragment>
     <fragment
         android:id="@+id/productsListFragment"
@@ -49,18 +55,29 @@
         <action
             android:id="@+id/action_productsListFragment_to_shoppingCartFragment"
             app:destination="@id/shoppingCartFragment" />
+        <action
+            android:id="@+id/action_productsListFragment_to_ordersFragment"
+            app:destination="@id/ordersFragment" />
     </fragment>
     <fragment
         android:id="@+id/shoppingCartFragment"
         android:name="com.example.beautystop.view.ShoppingBagFragment"
-        android:label="Cart"
-        tools:layout="@layout/fragment_shopping_bag" >
+        android:label="Bag"
+        tools:layout="@layout/fragment_shopping_bag">
         <action
             android:id="@+id/action_shoppingCartFragment_to_orderFragment"
             app:destination="@id/orderFragment" />
+        <action
+            android:id="@+id/action_shoppingCartFragment_to_ordersFragment"
+            app:destination="@id/ordersFragment" />
     </fragment>
     <fragment
         android:id="@+id/orderFragment"
         android:name="com.example.beautystop.view.OrderFragment"
         android:label="OrderFragment" />
+    <fragment
+        android:id="@+id/ordersFragment"
+        android:name="com.example.beautystop.view.OrdersFragment"
+        android:label="fragment_orders"
+        tools:layout="@layout/fragment_orders" />
 </navigation>
