no internet dialog

--- a/app/src/main/res/layout/fragment_shopping_bag.xml
+++ b/app/src/main/res/layout/fragment_shopping_bag.xml
@@ -7,31 +7,17 @@
     android:layout_height="match_parent"
     tools:context=".view.ShoppingBagFragment">
 
-    <TextView
-        android:id="@+id/title"
-        style="?android:attr/listSeparatorTextViewStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:gravity="center"
-        android:text="Shopping bag"
-        android:textColor="@color/header_textcolor"
-        android:textSize="40dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/cart_recyclerciew"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@color/background"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/order_button"
