--- a/app/src/main/res/layout/fragment_products_list.xml
+++ b/app/src/main/res/layout/fragment_products_list.xml
@@ -8,6 +8,21 @@
     android:background="@color/white"
     tools:context=".view.ProductsListFragment">
 
+    <com.google.android.material.slider.RangeSlider
+
+        android:id="@+id/sliderRange"
+        android:layout_width="197dp"
+        android:layout_height="17dp"
+        android:stepSize="5"
+        android:value="20"
+        android:valueFrom="0"
+        android:valueTo="100"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:values="@array/rangeSliderValues" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/productslist_recyclerview"
         android:layout_width="0dp"
@@ -16,13 +31,14 @@
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/sliderRange"
         app:layout_constraintVertical_bias="0.0"
         app:spanCount="3">
 
     </androidx.recyclerview.widget.RecyclerView>
+
+
 
     <ProgressBar
         android:id="@+id/list_progressBar"
@@ -34,16 +50,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ProgressBar
-        android:id="@+id/list_progressBar2"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="54dp"
-        android:layout_height="54dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/productslist_recyclerview"
-        app:layout_constraintVertical_bias="0.66" />
 </androidx.constraintlayout.widget.ConstraintLayout>
