--- a/app/src/main/res/layout/shopping_bag_item_layout.xml
+++ b/app/src/main/res/layout/shopping_bag_item_layout.xml
@@ -1,65 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+
+
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
     android:layout_marginStart="15dp"
+    android:layout_marginTop="40dp"
     android:layout_marginEnd="10dp"
     android:background="@color/background"
-    android:gravity="center">
+    android:gravity="center"
+    app:cardBackgroundColor="@color/background"
+    app:cardCornerRadius="40dp"
+    app:strokeColor="@color/black"
+    app:strokeWidth="0.5dp">
 
-    <ImageView
-        android:id="@+id/cart_product_imageview"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        tools:srcCompat="@tools:sample/avatars" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:gravity="center"
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/cart_product_name_tv"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="8dp"
-            android:text="TextView"
-            android:textColor="@color/black" />
+        <ImageView
+            android:id="@+id/cart_product_imageview"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            tools:srcCompat="@tools:sample/avatars" />
 
-        <TextView
-            android:id="@+id/cart_product_price_tv"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="8dp"
-            android:text="TextView"
-            android:textColor="@color/black" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/cart_product_name_tv"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="8dp"
+                android:text="TextView"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:id="@+id/cart_product_price_tv"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:text="TextView"
+                android:textColor="@color/black" />
 
 
-        <TextView
-            android:id="@+id/cart_product_quantity_tv"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="8dp"
-            android:text="TextView"
-            android:textColor="@color/black" />
+            <TextView
+                android:id="@+id/cart_product_quantity_tv"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:text="TextView"
+                android:textColor="@color/black" />
+
+        </LinearLayout>
+
+        <ImageButton
+            android:id="@+id/cart_delete_button"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginRight="5dp"
+            android:layout_weight="1"
+            android:background="@color/background"
+            android:backgroundTint="@color/background"
+            app:srcCompat="@drawable/ic_baseline_delete_24" />
 
     </LinearLayout>
 
-    <ImageButton
-        android:id="@+id/cart_delete_button"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_weight="1"
-        android:background="@color/background"
-        android:backgroundTint="@color/background"
-        app:srcCompat="@drawable/ic_baseline_delete_24" />
-</LinearLayout>
+</com.google.android.material.card.MaterialCardView>
