--- a/app/src/main/res/layout/fragment_products_list.xml
+++ b/app/src/main/res/layout/fragment_products_list.xml
@@ -8,20 +8,61 @@
     android:background="@color/white"
     tools:context=".view.ProductsListFragment">
 
-    <com.google.android.material.slider.RangeSlider
+<!--    <com.google.android.material.slider.RangeSlider-->
 
-        android:id="@+id/sliderRange"
-        android:layout_width="197dp"
-        android:layout_height="17dp"
-        android:stepSize="5"
-        android:value="20"
-        android:valueFrom="0"
-        android:valueTo="100"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
+<!--        android:id="@+id/sliderRange"-->
+<!--        android:layout_width="197dp"-->
+<!--        android:layout_height="17dp"-->
+<!--        android:stepSize="5"-->
+<!--        android:value="20"-->
+<!--        android:valueFrom="0"-->
+<!--        android:valueTo="100"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="1.0"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:values="@array/rangeSliderValues" />-->
+
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmer_layout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:values="@array/rangeSliderValues" />
+        tools:visibility="gone">
+
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <include layout="@layout/shimmer_products_item_layout" />
+
+            <include layout="@layout/shimmer_products_item_layout"/>
+
+            <include layout="@layout/shimmer_products_item_layout" />
+
+            <include layout="@layout/shimmer_products_item_layout"/>
+
+            <include layout="@layout/shimmer_products_item_layout" />
+
+            <include layout="@layout/shimmer_products_item_layout"/>
+
+            <include layout="@layout/shimmer_products_item_layout"/>
+
+            <include layout="@layout/shimmer_products_item_layout"/>
+
+            <include layout="@layout/shimmer_products_item_layout" />
+
+            <include layout="@layout/shimmer_products_item_layout"/>
+
+            <include layout="@layout/shimmer_products_item_layout"/>
+
+        </GridLayout>
+
+    </com.facebook.shimmer.ShimmerFrameLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/productslist_recyclerview"
@@ -32,7 +73,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/sliderRange"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         app:spanCount="3">
 
@@ -40,14 +81,14 @@
 
 
 
-    <ProgressBar
-        android:id="@+id/list_progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="54dp"
-        android:layout_height="54dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+<!--    <ProgressBar-->
+<!--        android:id="@+id/list_progressBar"-->
+<!--        style="?android:attr/progressBarStyle"-->
+<!--        android:layout_width="54dp"-->
+<!--        android:layout_height="54dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
