--- a/app/src/main/res/layout/products_item_layout.xml
+++ b/app/src/main/res/layout/products_item_layout.xml
@@ -9,7 +9,6 @@
     app:strokeColor="@color/black"
     app:strokeWidth="2dp">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -39,6 +38,11 @@
             android:text="TextView"
             android:textColor="@color/black"
             android:textSize="16sp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"></LinearLayout>
     </LinearLayout>
 
 </com.google.android.material.card.MaterialCardView>
