--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="hint_color">#8A8282</color>
     <color name="header_textcolor">#AD988E71</color>
     <color name="bottom_bar">#CCCCCC</color>
+    <color name="shimmerColor">#C2C2C2</color>
 </resources>
